# DocuFlex

./: .gitignore  README.md  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  test.py
routes/: convert.py  ocr.py  pdf_utils.py  qr.py
services/: convert_service.py  file_utils.py  lo_worker_manager.py  ocr_service.py  pdf_service.py  qr_service.py  uno_worker.py
static/: app.js  styles.css
templates/: base.html  convert.html  convert_common_to_pdf.html  convert_image_to_pdf.html  convert_pdf_to_image.html  convert_pdf_to_word.html  convert_word_to_pdf.html  index.html  ocr.html  ocr_image.html  ocr_pdf.html  pdf.html  pdf_compress.html  pdf_merge.html  pdf_reorder.html  pdf_split.html  qr.html
